<resources>
    <string name="app_name">UpTodo</string>
    <string name="uptodo">UpTodo</string>
    <string name="skip">SKIP</string>
    <string name="back">BACK</string>
    <string name="next">Next</string>
    <string name="manage_your_tasks">Manage your tasks</string>
    <string name="you_can_easily_manage_all_of_your_daily_tasks_in_dome_for_free">You can easily manage all of your daily tasks in DoMe for free</string>
    <string name="create_daily_routine">Create daily routine</string>
    <string name="in_uptodo_you_can_create_your_personalized_routine_to_stay_productive">In Uptodo  you can create your personalized routine to stay productive</string>
    <string name="organize_your_tasks">Organize your tasks</string>
    <string name="you_can_organize_your_daily_tasks_by_adding_your_tasks_into_separate_categories">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_uptodo">Welcome to UpTodo</string>
    <string name="please_login_to_your_account_or_create_new_account_to_continue">Please login to your account or create new account to continue</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>\
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_you_password">Re-enter you Password</string>
    <string name="or">or</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="index">Index</string>
    <string name="calendar">Calendar</string>
    <string name="focus">Focus</string>
    <string name="profile">Profile</string>
    <string name="what_do_you_want_to_do_today">What do you want to do today?</string>
    <string name="tap_to_add_your_tasks">Tap + to add your tasks</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task name</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="choose_time">Choose Time</string>
    <string name="_1">1</string>
    <string name="task_priority">Task Priority</string>
    <string name="save">Save</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_category">Add Category</string>
    <string name="create_new_category">Create new category</string>
    <string name="category_name">Category name :</string>
    <string name="category_name_hint">Category name</string>
    <string name="category_icon">Category icon :</string>
    <string name="category_color">Category color :</string>
    <string name="create_category">Create Category</string>
    <string name="search_for_your_task">Search for your task...</string>
    <string name="default_web_client_id">506079378598-e273qc8hrqvivcb8l09s03ijelnd3ndp.apps.googleusercontent.com</string>
</resources>