<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:paddingEnd="@dimen/dim_24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/dim_48dp"
        android:layout_height="@dimen/dim_48dp"
        android:layout_marginStart="@dimen/dim_12dp"
        android:padding="@dimen/dim_12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/LatoBold32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_28dp"
        android:text="@string/login"
        android:textColor="@color/white_87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelEmailId"
        style="@style/LatoRegular16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_54dp"
        android:text="@string/email_id"
        android:textColor="@color/white_87"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailId"
        style="@style/LatoRegular16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/enter_your_email_id"
        android:maxLines="1"
        android:padding="@dimen/dim_12dp"
        android:textColor="@color/white_87"
        android:textColorHint="@color/edit_text_hint_color"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvLabelEmailId"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmailId" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelPassword"
        style="@style/LatoRegular16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_26dp"
        android:text="@string/password"
        android:textColor="@color/white_87"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/etEmailId" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        style="@style/LatoRegular16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="@dimen/dim_12dp"
        android:textColor="@color/white_87"
        android:textColorHint="@color/edit_text_hint_color"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvLabelEmailId"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelConfirmPassword"
        style="@style/LatoRegular16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_26dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white_87"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etConfirmPassword"
        style="@style/LatoRegular16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/re_enter_you_password"
        android:inputType="textPassword"
        android:padding="@dimen/dim_12dp"
        android:textColor="@color/white_87"
        android:textColorHint="@color/edit_text_hint_color"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvLabelEmailId"
        app:layout_constraintTop_toBottomOf="@id/tvLabelConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_40dp"
        android:backgroundTint="@color/btn_color"
        android:paddingHorizontal="@dimen/dim_24dp"
        android:paddingVertical="@dimen/dim_12dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/dim_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

    <View
        android:id="@+id/line1"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="@dimen/dim_1dp"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_32dp"
        android:layout_marginEnd="@dimen/dim_2dp"
        android:background="@color/edit_text_stroke_color"
        app:layout_constraintEnd_toStartOf="@+id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOr"
        style="@style/LatoRegular16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_2dp"
        android:layout_marginTop="@dimen/dim_20dp"
        android:gravity="center_vertical"
        android:text="@string/or"
        android:textColor="@color/edit_text_stroke_color"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/line1"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <View
        android:id="@+id/line2"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="@dimen/dim_1dp"
        android:layout_marginStart="@dimen/dim_2dp"
        android:layout_marginTop="@dimen/dim_32dp"
        android:background="@color/edit_text_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvOr"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithGoogle"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_24dp"
        android:fontFamily="@font/lato_regular"
        android:paddingVertical="@dimen/dim_12dp"
        android:text="@string/register_with_google"
        android:textColor="@color/white_87"
        android:textSize="@dimen/dim_16sp"
        app:cornerRadius="@dimen/dim_4dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/dim_10dp"
        app:iconSize="@dimen/dim_24dp"
        app:iconTint="@null"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:strokeColor="@color/btn_stroke_outline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlreadyHaveAccount"
            style="@style/LatoRegular12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/edit_text_stroke_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            style="@style/LatoRegular12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_4dp"
            android:text="@string/login"
            android:textColor="@color/white_87"
            app:layout_constraintStart_toEndOf="@+id/tvAlreadyHaveAccount"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>