<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bs_16dp"
    android:padding="@dimen/dim_24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        style="@style/LatoBold20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:textColor="@color/white_87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTask"
        style="@style/LatoRegular18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_22dp"
        android:background="@null"
        android:hint="@string/task_name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white_87"
        android:textColorHint="@color/grey_afafaf"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        style="@style/LatoRegular18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_22dp"
        android:background="@null"
        android:hint="@string/description"
        android:textColor="@color/white_87"
        android:textColorHint="@color/grey_afafaf"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@id/etTask" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_36dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_deadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_36dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_category"
        app:layout_constraintStart_toEndOf="@id/ivDeadline"
        app:layout_constraintTop_toTopOf="@id/ivDeadline" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_36dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_priority"
        app:layout_constraintStart_toEndOf="@id/ivCategory"
        app:layout_constraintTop_toTopOf="@id/ivDeadline" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivDeadline" />

</androidx.constraintlayout.widget.ConstraintLayout>