<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".views.OnboardingFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSkip"
        style="@style/LatoRegular16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_14dp"
        android:text="@string/skip"
        android:textColor="@color/white_44"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpBenefits"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_0dp"
        android:layout_marginTop="@dimen/dim_2dp"
        app:layout_constraintBottom_toTopOf="@id/mainActionButton"
        app:layout_constraintTop_toBottomOf="@id/tvSkip" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:layout_width="@dimen/dim_26dp"
            android:layout_height="@dimen/dim_4dp"
            android:background="@drawable/background_nav_bar"
            android:button="@null"
            tools:checked="true" />

        <RadioButton
            android:layout_width="@dimen/dim_26dp"
            android:layout_height="@dimen/dim_4dp"
            android:layout_marginStart="@dimen/dim_8dp"
            android:background="@drawable/background_nav_bar"
            android:button="@null" />

        <RadioButton
            android:layout_width="@dimen/dim_26dp"
            android:layout_height="@dimen/dim_4dp"
            android:layout_marginStart="@dimen/dim_8dp"
            android:background="@drawable/background_nav_bar"
            android:button="@null" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBack"
        style="@style/LatoRegular16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_14dp"
        android:layout_marginBottom="@dimen/dim_62dp"
        android:text="@string/back"
        android:textColor="@color/white_44"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mainActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dim_24dp"
        android:layout_marginBottom="@dimen/dim_50dp"
        android:backgroundTint="@color/btn_color"
        android:paddingHorizontal="@dimen/dim_24dp"
        android:paddingVertical="@dimen/dim_12dp"
        android:text="@string/next"
        android:textAllCaps="true"
        app:cornerRadius="@dimen/dim_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>